--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
     color: var(--color-white);
     line-height: 1.7;
     background-image: url(../src/assets/test2.png);
+    background-color: var(--color-bg);
 }
 
 /* General Styles */
