Partly stopped Home.css effecting blog css

--- a/Frontend/src/components/home/Home.css
+++ b/Frontend/src/components/home/Home.css
@@ -33,7 +33,7 @@ html {
     display: none;
 }
 
-body {
+.body {
     font-family: 'Poppins', sans-serif;
     background: var(--color-bg);
     color: var(--color-white);
