--- a/Frontend/src/Blog.css
+++ b/Frontend/src/Blog.css
@@ -1,21 +1,41 @@
+/* p {
+    padding-left: 1rem;
+} */
+
+.entirePage {
+
+}
+
+/* NOTE, the margins on the left and right are auto to center the content. Can only be used if width
+is > 100vw, because it can't take up the hole screen... then there is no room for margin! */
+.content{
+    margin: 0 auto;
+    justify-content: center;
+    width: 70vw;
+    height: 100vh;
+    display: grid;
+    
+    /* Creates 2x2 then puts gap */
+    grid-template-columns: 1fr .3fr;
+    grid-template-rows: 50px 1fr;
+    gap: 10px;
+    padding: 1rem;
+    box-sizing: border-box; 
+}
+
+.title {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    background-color: white;
+    color: black;
+}
+
 .post{
-    float: left;
-    width: auto;
-    width: 60%;
+    
 }
 
 .side-content {
-    float: right;
-    width: 30%;
-    background-color: white;
-    color: black;
-    border: 1px;
-}
-
-.content{
-    padding-top: 2rem;
-    padding-right: 5rem;
-    padding-left: 5rem;
+    
 }
 
 li {
