--- a/Frontend/src/BlogHome.css
+++ b/Frontend/src/BlogHome.css
@@ -13,6 +13,15 @@
     box-sizing: border-box; 
 }
 
+.card {
+  margin-left: 1em;
+}
+
+.articlePanel {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
 
 :root {
@@ -61,7 +70,7 @@ a {
   align-items: flex-end;
   background-size: cover;
   background-position: center;
-  box-shadow: 0 0 5em -1em black;
+  /* box-shadow: 0 0 5em -1em black; */
   transition: all, var(--transition-time);
   position: relative;
   overflow: hidden;
